fix: change body overflow from hidden to auto for improved scrolling behavior

--- a/app/globals.css
+++ b/app/globals.css
@@ -23,7 +23,7 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
-  overflow: hidden;
+  overflow: auto;
   background-image: url(../public/assets/images/background.jpg);
   background-size: 'inherit'; 
   background-repeat: 'no-repeat'; 
@@ -65,7 +65,6 @@ h4{
   margin-top: 2rem;
   font-weight: 530;
   color: #0a0a0a;
-  overflow: auto;
 }
 
 p{
